# markdown-agent

./: .gitignore  README.md  pyproject.toml
src/markdown_agent/: __init__.py  cli.py  config.py  gate.py  git.py  markdown.py  pipeline.py  sync.py  updater.py
src/markdown_agent/providers/: __init__.py  base.py  claude.py  lmstudio.py  ollama.py  openai.py
tests/: test_gate.py  test_markdown.py  test_pipeline.py  test_sync.py
