[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-agent"
version = "0.1.0"
description = "AI-powered agent that keeps AGENTS.md, CLAUDE.md, and GEMINI.md in sync with your codebase"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pyyaml>=6",
    "anthropic>=0.28",
    "openai>=1.35",
    "watchdog>=4",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
markdown-agent = "markdown_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
